# rusty-transcriber

./: .editorconfig  .gitignore  Cargo.toml  LICENCE  README.md
.github/workflows/: continuous-integration.yaml
src/: diarization.rs  io.rs  lib.rs  main.rs  stt.rs  utils.rs  vad.rs
